--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,13 @@
 		<module>components-api</module>
 		<module>components-common</module>
 		<module>components-common-oauth</module>
-		<module>components-salesforce</module>
+		<module>components-oracle</module>
+		<!--
+		<module>components-salesforce</module> 	
 		<module>components-webtest</module>
 		<module>components-osgitest</module>
 		<module>components-proptester</module>
+		-->
 	</modules>
 	<profiles>
 		<profile>
